# talatrivia

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/api_talatrivia/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/api_talatrivia/migrations/: 0001_initial.py
apps/core/: models.py  serializers.py  urls.py  views.py
config/: Celery.py  _base.py  urls.py
config/settings/: development.py  production.py
